--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2",
+  "name": "xyy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.14",
     "qs": "^6.11.2",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
