--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@panzoom/panzoom": "^4.5.1",
     "axios": "^1.6.7",
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "qs": "^6.11.2",
     "vue": "^2.6.14",
+    "vue-clipboard2": "^0.3.3",
     "vue-cookies": "^1.8.3",
     "vue-router": "^3.5.2"
   },
